fixed extra space under bottom line in flat toolbar

--- a/chrome/content/quickfolders-layout.css
+++ b/chrome/content/quickfolders-layout.css
@@ -663,7 +663,6 @@ toolbar.quickfolders-flat {
 	display: -moz-inline-box;
 	margin: 0;
 	padding: 0;
-	border: 1px solid transparent;
 }
 
 
